# duckdb-in-action

./: README.md  pyproject.toml
src/chapter_2/: check_extensions.sql  check_extensions_output.csv  describe_extensions_function.sql  describe_extensions_output.csv  install_httpfs.sql  install_httpfs_output.csv  read_remote_file.sql  read_remote_file_output.csv  western_europe.sql  western_europe_output.csv  western_europe_output.parquet  write_to_parquet.sql
src/chapter_3/: cartesian_product.csv  cartesian_product.sql  common_table_expression.csv  common_table_expression.sql  find_highest_production.csv  find_highest_production.sql  full_outer_join.csv  full_outer_join.sql  grouped_aggregates.csv  grouped_aggregates.sql  idempotent_insert.csv  idempotent_insert.sql  inner_join.csv  inner_join.sql  left_outer_join.csv  left_outer_join.sql  sample_non_zero_readings.csv  sample_non_zero_readings.sql  virtual_table.csv  virtual_table.sql
src/chapter_3/db/: load.sql  schema.sql
src/profiling/: explain_analyze_count.sql  explain_analyze_count.txt  profile_count_detailed.sql  profile_count_detailed.txt  profile_count_standard.sql  profile_count_standard.txt  profile_highest_production_query.sql  profile_highest_production_query.txt
