[project]
name = "duckdb-in-action"
version = "0.1.0"
description = "Tutorial repository following DuckDB in Action"
authors = [
    {name = "Harsh Bajwa",email = "90355783+harshsbajwa@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb (>=1.3.2,<2.0.0)",
]

[tool.poetry]
packages = [{include = "chapter_2", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
